# McpCollection

./: README.md
.github/workflows/: plantuml-render.yml
diagrams/: mcp_client_chatbot.puml
mcp_client_chatbot/: README.md  chat_session.py  config.py  llm_client.py  main.py  requirements.txt  server.py  servers_config.json  tool.py
mcp_server_filesystem/: README.md  main.py
mcp_server_gomoku/: main.py  pyproject.toml
mcp_server_localSearch/: README.md  main.py  pyproject.toml  rg_search.py
mcp_server_outlook/: README.md  exceptions.py  mail.py  mail_fetcher.py  main.py  pyproject.toml
mcp_server_outlook/tool/: generateEmailToken.py
outlook_mailer/: README.md  main.py  pyproject.toml
